[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Use Solana's BPF-compatible fork of curve25519-dalek
# This version has optimizations to reduce stack usage for BPF
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", branch = "main" }
