[package]
name = "solrush-dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solrush_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]



[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
spl-token = "~5"
spl-associated-token-account = "~1"

# Fix for Solana BPF compilation - getrandom doesn't support BPF target
# Adding with dummy feature allows compilation but runtime calls will fail
# This is acceptable since on-chain programs should not use random numbers
getrandom = { version = "0.1", features = ["dummy"] }


